--- a/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_register.xml
+++ b/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_register.xml
@@ -145,7 +145,7 @@
         app:srcCompat="@drawable/seta" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txtCrie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Li e concordo com os Termos de Uso."
@@ -164,7 +164,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/txtCrie"
         app:layout_constraintVertical_bias="0.109" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
