--- a/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_register.xml
+++ b/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_register.xml
@@ -8,58 +8,67 @@
     android:layout_height="match_parent"
     tools:context=".RegisterActivity">
 
-    <TextView
-        android:id="@+id/txtTitulo"
-        android:layout_width="152dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="Criar Conta"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.216"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/blue_neon"
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="415dp"
+        android:layout_height="70dp"
+        android:background="@color/blue_light_neon"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.087"
-        tools:layout_editor_absoluteX="25dp" />
-
-    <EditText
-        android:id="@+id/txtSenha"
-        android:layout_width="360dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/input_background"
-        android:hint=" Senha"
-        android:inputType="textPassword"
-        android:textColor="#000000"
-        android:textColorHint="#7A7A7A"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtCelular" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <TextView
+            android:id="@+id/txtTitulo"
+            android:layout_width="223dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="70dp"
+            android:paddingTop="3dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="Criar Conta"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="24sp" />
+
+        <ImageView
+            android:id="@+id/imgVoltar"
+            android:layout_width="37dp"
+            android:layout_height="36dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="170dp"
+            app:srcCompat="@drawable/seta_voltar" />
+    </FrameLayout>
 
     <EditText
         android:id="@+id/txtNome"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/input_background"
         android:hint=" Nome completo"
-        android:textColor="#000000"
-        android:textColorHint="#7A7A7A"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtTitulo" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+
+    <EditText
+        android:id="@+id/txtCpf"
+        android:layout_width="360dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/input_background"
+        android:hint=" CPF"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtNome" />
 
     <EditText
         android:id="@+id/txtDataNasc"
@@ -68,8 +77,9 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/input_background"
         android:hint=" Data de Nascimento"
-        android:textColor="#000000"
-        android:textColorHint="#7A7A7A"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:maxLength="10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,8 +92,8 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/input_background"
         android:hint=" E-mail"
-        android:textColor="#000000"
-        android:textColorHint="#7A7A7A"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,32 +106,34 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/input_background"
         android:hint=" Celular"
-        android:textColor="#000000"
-        android:textColorHint="#7A7A7A"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtEmail" />
 
     <EditText
-        android:id="@+id/txtCpf"
+        android:id="@+id/txtSenha"
         android:layout_width="360dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/input_background"
-        android:hint=" CPF"
-        android:textColor="#000000"
-        android:textColorHint="#7A7A7A"
+        android:hint=" Senha"
+        android:inputType="textPassword"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtNome" />
+        app:layout_constraintTop_toBottomOf="@id/txtCelular" />
+
 
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/blue_neon"
+        android:backgroundTint="@color/blue_light_neon"
         android:text="Cadastrar"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -130,19 +142,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.804" />
-
-    <ImageView
-        android:id="@+id/imgVoltar"
-        android:layout_width="31dp"
-        android:layout_height="33dp"
-        android:rotation="180"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.042"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022"
-        app:srcCompat="@drawable/seta" />
 
     <TextView
         android:id="@+id/txtCrie"
@@ -166,5 +165,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtCrie"
         app:layout_constraintVertical_bias="0.109" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
