Implementando validações na tela de cadastro + conexao com o servidor

--- a/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_login.xml
+++ b/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_login.xml
@@ -8,29 +8,40 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-    <TextView
-        android:id="@+id/txtTitulo"
-        android:layout_width="235dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="Entrar na Conta"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.204"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/blue_neon"
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="415dp"
+        android:layout_height="70dp"
+        android:background="@color/blue_light_neon"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.087"
-        tools:layout_editor_absoluteX="25dp" />
+        app:layout_constraintVertical_bias="0.0">
+
+        <TextView
+            android:id="@+id/txtTitulo"
+            android:layout_width="223dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="50dp"
+            android:paddingTop="3dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="Entrar na Conta"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="24sp" />
+
+        <ImageView
+            android:id="@+id/imgVoltar"
+            android:layout_width="63dp"
+            android:layout_height="36dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="170dp"
+            app:srcCompat="@drawable/seta_voltar" />
+    </FrameLayout>
+
 
 
     <EditText
@@ -66,7 +77,7 @@
         android:id="@+id/btnRegister"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/blue_neon"
+        android:backgroundTint="@color/blue_light_neon"
         android:text="Entrar"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -75,19 +86,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.4" />
-
-    <ImageView
-        android:id="@+id/imgVoltar"
-        android:layout_width="31dp"
-        android:layout_height="33dp"
-        android:rotation="180"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.042"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022"
-        app:srcCompat="@drawable/seta" />
 
     <TextView
         android:id="@+id/txtCrie"
