Atualizando logo e design

--- a/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_main.xml
+++ b/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/logoneon" />
+        android:layout_width="250dp"
+        android:layout_height="210dp"
+        android:src="@drawable/logo_neon_academy" />
 
 </LinearLayout>
