--- a/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_welcome.xml
+++ b/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_welcome.xml
@@ -17,19 +17,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.666"
+        app:layout_constraintVertical_bias="0.684"
         app:srcCompat="@drawable/cartao1" />
 
     <ImageView
         android:id="@+id/imgLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="208dp"
+        android:layout_height="112dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.048"
-        app:srcCompat="@drawable/logoneon" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/logo_neon_academy" />
 
     <TextView
         android:id="@+id/textView3"
@@ -44,7 +45,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.151" />
+        app:layout_constraintVertical_bias="0.21" />
 
     <Button
         android:id="@+id/btnRegister"
