Criando o appValues e adicionando string nas telas

--- a/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_login.xml
+++ b/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
             android:layout_marginEnd="50dp"
             android:paddingTop="3dp"
             android:fontFamily="@font/poppins_semibold"
-            android:text="Entrar na Conta"
+            android:text="@string/appTituloLogin"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="24sp" />
@@ -50,7 +50,7 @@
         android:layout_marginTop="21dp"
         android:layout_marginBottom="1dp"
         android:fontFamily="@font/poppins_semibold"
-        android:text="CPF"
+        android:text="@string/appTituloCPF"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtCPF"
@@ -67,7 +67,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="56dp"
         android:background="@drawable/input_background"
-        android:hint=" 000.000.000-00"
+        android:hint="@string/appMascaraCPF"
+        android:padding="8dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Senha"
+        android:text="@string/appTituloSenha"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtSenha"
@@ -97,7 +98,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="52dp"
         android:background="@drawable/input_background"
-        android:hint=" ********"
+        android:hint="@string/appMascaraSenha"
+        android:padding="8dp"
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -112,7 +114,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="364dp"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Ainda não tem uma conta? Crie uma"
+        android:text="@string/appTextCrieConta"
         android:textColor="@color/blue_light_neon"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -128,7 +130,7 @@
         android:layout_height="50dp"
         android:backgroundTint="@color/blue_light_neon"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Entrar"
+        android:text="@string/appBtnEntrar"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
