--- a/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_welcome.xml
+++ b/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_welcome.xml
@@ -33,12 +33,12 @@
         app:srcCompat="@drawable/logo_neon_academy" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txtApresentacao"
         android:layout_width="247dp"
         android:layout_height="276dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="center"
-        android:text="Pagamentos acadêmicos simples e seguros na palma da sua mão"
+        android:text="@string/appTextApresentacao"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,8 +52,9 @@
         android:layout_width="322dp"
         android:layout_height="50dp"
         android:backgroundTint="@color/yellow_neon"
-        android:text="Quero me cadastrar"
+        android:text="@string/appBtnRegister"
         android:textColor="@color/brown_neon"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -66,7 +67,8 @@
         android:layout_width="322dp"
         android:layout_height="50dp"
         android:backgroundTint="@android:color/transparent"
-        android:text="Acessar minha conta"
+        android:text="@string/appBtnLogin"
+        android:textSize="20sp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
