--- a/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_edit_profile.xml
+++ b/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_edit_profile.xml
@@ -26,7 +26,7 @@
             android:layout_marginEnd="70dp"
             android:fontFamily="@font/poppins_semibold"
             android:paddingTop="3dp"
-            android:text="Editar Perfil"
+            android:text="@string/appTituloEditProfile"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="24sp" />
@@ -47,7 +47,7 @@
         android:layout_marginTop="21dp"
         android:layout_marginBottom="1dp"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Nome Completo"
+        android:text="@string/appTituloNome"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtNome1"
@@ -64,7 +64,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="56dp"
         android:background="@drawable/input_background"
-        android:hint=" Seu nome"
+        android:hint="@string/appMascaraNome"
+        android:padding="8dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="1dp"
-        android:text="E-mail"
+        android:text="@string/appTituloEmail"
         android:fontFamily="@font/poppins_semibold"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -96,7 +97,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="52dp"
         android:background="@drawable/input_background"
-        android:hint="  Seu email"
+        android:hint="@string/appMascaraEmail"
+        android:padding="8dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,7 +112,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Celular"
+        android:text="@string/appTituloCelular"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtTelefone1"
@@ -127,7 +129,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="52dp"
         android:background="@drawable/input_background"
-        android:hint=" Celular"
+        android:hint="@string/appMascaraCelular"
+        android:padding="8dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -140,7 +143,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Senha"
+        android:text="@string/appTituloSenha"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtSenha1"
@@ -156,7 +159,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="52dp"
         android:background="@drawable/input_background"
-        android:hint=" ********"
+        android:hint="@string/appMascaraSenha"
+        android:padding="8dp"
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -171,7 +175,7 @@
         android:layout_height="50dp"
         android:backgroundTint="@color/blue_light_neon"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Aplicar Mudanças"
+        android:text="@string/appBtnAtualizar"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -187,7 +191,7 @@
         android:layout_height="50dp"
         android:backgroundTint="@color/red"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Excluir conta"
+        android:text="@string/appBtnExcluir"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
