--- a/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_register.xml
+++ b/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_register.xml
@@ -28,7 +28,7 @@
             android:layout_marginEnd="70dp"
             android:fontFamily="@font/poppins_semibold"
             android:paddingTop="3dp"
-            android:text="Criar Conta"
+            android:text="@string/appTituloRegister"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="24sp" />
@@ -49,7 +49,7 @@
         android:layout_marginTop="21dp"
         android:layout_marginBottom="1dp"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Nome Completo"
+        android:text="@string/appTituloNome"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtNome"
@@ -59,13 +59,15 @@
         app:layout_constraintTop_toBottomOf="@+id/frameLayout"
         app:layout_constraintVertical_bias="1.0" />
 
+
     <EditText
         android:id="@+id/txtNome"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="52dp"
         android:background="@drawable/input_background"
-        android:hint=" Seu nome"
+        android:hint="@string/appMascaraNome"
+        android:padding="8dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,13 +75,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
 
-
     <TextView
         android:id="@+id/tituloCPF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:text="CPF"
+        android:text="@string/appTituloCPF"
         android:fontFamily="@font/poppins_semibold"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -97,7 +98,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="52dp"
         android:background="@drawable/input_background"
-        android:hint=" 000.000.000-00"
+        android:hint="@string/appMascaraCPF"
+        android:padding="8dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Data de Nascimento"
+        android:text="@string/appTituloDataNascimento"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtDataNasc"
@@ -127,7 +129,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="52dp"
         android:background="@drawable/input_background"
-        android:hint=" 00/00/0000"
+        android:hint="@string/appMascaraDataNascimento"
+        android:padding="8dp"
         android:maxLength="10"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -142,7 +145,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="1dp"
-        android:text="E-mail"
+        android:text="@string/appTituloEmail"
         android:fontFamily="@font/poppins_semibold"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -159,7 +162,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="52dp"
         android:background="@drawable/input_background"
-        android:hint="  Seu email"
+        android:hint="@string/appMascaraEmail"
+        android:padding="8dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -173,7 +177,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Celular"
+        android:text="@string/appTituloCelular"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtCelular"
@@ -189,7 +193,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="52dp"
         android:background="@drawable/input_background"
-        android:hint=" Celular"
+        android:hint="@string/appMascaraCelular"
+        android:padding="8dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -202,7 +207,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Senha"
+        android:text="@string/appTituloSenha"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtSenha"
@@ -218,7 +223,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="52dp"
         android:background="@drawable/input_background"
-        android:hint=" ********"
+        android:hint="@string/appMascaraSenha"
+        android:padding="8dp"
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -232,22 +238,22 @@
         android:layout_width="360dp"
         android:layout_height="50dp"
         android:backgroundTint="@color/blue_light_neon"
-        android:text="Cadastrar"
-        android:textSize="20sp"
         android:fontFamily="@font/poppins_semibold"
+        android:text="@string/appBtnCadastrar"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtSenha"
-        app:layout_constraintVertical_bias="0.451" />
+        app:layout_constraintVertical_bias="0.171" />
 
     <TextView
-        android:id="@+id/txtCrie"
+        android:id="@+id/txtTermoUso1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Li e concordo com os Termos de Uso."
+        android:text="@string/appTermoUso1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -256,14 +262,14 @@
         app:layout_constraintVertical_bias="0.192" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txtTermoUso2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Aviso Externo de Privacidade."
+        android:text="@string/appTermoUso2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtCrie"
+        app:layout_constraintTop_toBottomOf="@+id/txtTermoUso1"
         app:layout_constraintVertical_bias="0.109" />
 
 
