--- a/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_edit_profile.xml
+++ b/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_edit_profile.xml
@@ -8,7 +8,7 @@
     tools:context=".EditProfileActivity">
 
     <FrameLayout
-        android:id="@+id/frameLayout"
+        android:id="@+id/frameLayoutEditProfile"
         android:layout_width="415dp"
         android:layout_height="70dp"
         android:background="@color/blue_light_neon"
@@ -19,25 +19,34 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-        <TextView
-            android:layout_width="223dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginEnd="70dp"
-            android:fontFamily="@font/poppins_semibold"
-            android:paddingTop="3dp"
-            android:text="@string/appTituloEditProfile"
-            android:textAlignment="center"
-            android:textColor="#000000"
-            android:textSize="24sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
 
-        <ImageView
-            android:id="@+id/imgVoltar1"
-            android:layout_width="37dp"
-            android:layout_height="36dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="170dp"
-            app:srcCompat="@drawable/seta_voltar" />
+            <ImageView
+                android:id="@+id/imgVoltar"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/seta_voltar"
+                android:scaleType="centerInside" />
+
+            <TextView
+                android:id="@+id/txtTitulo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="@string/appTituloEditProfile"
+                android:textAlignment="center"
+                android:textColor="@color/appColorPreto"
+                android:textSize="24sp"
+                android:paddingTop="3dp"
+                android:textStyle="bold" />
+        </LinearLayout>
     </FrameLayout>
 
     <TextView
@@ -48,13 +57,13 @@
         android:layout_marginBottom="1dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/appTituloNome"
-        android:textColor="#000000"
+        android:textColor="@color/appColorPreto"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtNome1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.103"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayoutEditProfile"
         app:layout_constraintVertical_bias="1.0" />
 
 
@@ -66,12 +75,12 @@
         android:background="@drawable/input_background"
         android:hint="@string/appMascaraNome"
         android:padding="8dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColor="@color/appColorPreto"
+        android:textColorHint="@color/appColorPreto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayoutEditProfile" />
 
     <TextView
         android:id="@+id/tituloEmail1"
@@ -81,7 +90,7 @@
         android:layout_marginBottom="1dp"
         android:text="@string/appTituloEmail"
         android:fontFamily="@font/poppins_semibold"
-        android:textColor="#000000"
+        android:textColor="@color/appColorPreto"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtEmail1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,8 +108,8 @@
         android:background="@drawable/input_background"
         android:hint="@string/appMascaraEmail"
         android:padding="8dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColor="@color/appColorPreto"
+        android:textColorHint="@color/appColorPreto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +122,7 @@
         android:layout_marginBottom="1dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/appTituloCelular"
-        android:textColor="#000000"
+        android:textColor="@color/appColorPreto"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtTelefone1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -131,8 +140,8 @@
         android:background="@drawable/input_background"
         android:hint="@string/appMascaraCelular"
         android:padding="8dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColor="@color/appColorPreto"
+        android:textColorHint="@color/appColorPreto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
@@ -144,7 +153,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/appTituloSenha"
-        android:textColor="#000000"
+        android:textColor="@color/appColorPreto"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtSenha1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -162,8 +171,8 @@
         android:hint="@string/appMascaraSenha"
         android:padding="8dp"
         android:inputType="textPassword"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColor="@color/appColorPreto"
+        android:textColorHint="@color/appColorPreto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
@@ -176,7 +185,7 @@
         android:backgroundTint="@color/blue_light_neon"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/appBtnAtualizar"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/appColorBranco"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -192,7 +201,7 @@
         android:backgroundTint="@color/red"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/appBtnExcluir"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/appColorBranco"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
