--- a/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_login.xml
+++ b/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     tools:context=".LoginActivity">
 
     <FrameLayout
-        android:id="@+id/frameLayout"
+        android:id="@+id/frameLayoutLogin"
         android:layout_width="415dp"
         android:layout_height="70dp"
         android:background="@color/blue_light_neon"
@@ -20,27 +20,36 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-        <TextView
-            android:id="@+id/txtTitulo"
-            android:layout_width="223dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginEnd="50dp"
-            android:paddingTop="3dp"
-            android:fontFamily="@font/poppins_semibold"
-            android:text="@string/appTituloLogin"
-            android:textAlignment="center"
-            android:textColor="#000000"
-            android:textSize="24sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
 
-        <ImageView
-            android:id="@+id/imgVoltar"
-            android:layout_width="63dp"
-            android:layout_height="36dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="170dp"
-            app:srcCompat="@drawable/seta_voltar" />
+            <ImageView
+                android:id="@+id/imgVoltar"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/seta_voltar"
+                android:scaleType="centerInside" />
+
+            <TextView
+                android:id="@+id/txtTitulo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="@string/appTituloLogin"
+                android:textAlignment="center"
+                android:textColor="@color/appColorPreto"
+                android:textSize="24sp"
+                android:paddingTop="3dp"
+                android:textStyle="bold" />
+        </LinearLayout>
     </FrameLayout>
+
 
 
     <TextView
@@ -51,13 +60,13 @@
         android:layout_marginBottom="1dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/appTituloCPF"
-        android:textColor="#000000"
+        android:textColor="@color/appColorPreto"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtCPF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.067"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayoutLogin"
         app:layout_constraintVertical_bias="1.0" />
 
 
@@ -69,12 +78,12 @@
         android:background="@drawable/input_background"
         android:hint="@string/appMascaraCPF"
         android:padding="8dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColor="@color/appColorPreto"
+        android:textColorHint="@color/appColorPreto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayoutLogin" />
 
     <TextView
         android:id="@+id/tituloSenha"
@@ -83,7 +92,7 @@
         android:layout_marginBottom="1dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/appTituloSenha"
-        android:textColor="#000000"
+        android:textColor="@color/appColorPreto"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtSenha"
         app:layout_constraintEnd_toEndOf="parent"
@@ -101,8 +110,8 @@
         android:hint="@string/appMascaraSenha"
         android:padding="8dp"
         android:inputType="textPassword"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColor="@color/appColorPreto"
+        android:textColorHint="@color/appColorPreto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,7 +140,7 @@
         android:backgroundTint="@color/blue_light_neon"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/appBtnEntrar"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/appColorBranco"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
