--- a/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_welcome.xml
+++ b/src/Frontend/NeonPay-Academy/app/src/main/res/layout/activity_welcome.xml
@@ -39,7 +39,7 @@
         android:fontFamily="@font/poppins_semibold"
         android:gravity="center"
         android:text="@string/appTextApresentacao"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/appColorBranco"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
         android:backgroundTint="@android:color/transparent"
         android:text="@string/appBtnLogin"
         android:textSize="20sp"
-        android:textColor="@color/white"
+        android:textColor="@color/appColorBranco"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
